--- a/programacion-multimedia-y-dispositivos-moviles/Training SpaceApps/css/index.css
+++ b/programacion-multimedia-y-dispositivos-moviles/Training SpaceApps/css/index.css
@@ -1,6 +1,7 @@
 html {
     margin: 0;
     padding: 0;
+    max-width: 100vw;
 }
 
 header {
@@ -15,7 +16,9 @@ header {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
     align-items: center;
     height: auto;
     width: auto;
@@ -23,15 +26,28 @@ main {
 
 .rover-photo {
     display: flex;
+    width: 400px;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     padding: 20px;
     border: 2px solid black;
+    background-color: #A4BAB7;
+    margin: 10px;
+}
+
+.rover-details {
+
+    padding: 10px;
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 .img {
-    max-width: 40vw;
+    max-height: 160px;
+    max-width: 160px;
     padding: 40px;
     border-bottom: 1px solid black;
+
+
 }
